hard-gists/6069808/run.log
=== Docker Run Log for 6069808 ===
Started at: Mi 29. Okt 16:18:54 CET 2025

[2025-10-29 16:18:54] START: Running container for 6069808
[2025-10-29 16:18:54] SUCCESS: Container c7551ecbb126e8be5e65d6821910412b5f9eab0913bd7e8d587064c32049e84b started for 6069808
=== Container logs for 6069808 ===
  File "/snippet.py", line 80
    print 'From %s parsing themes ...' % INDEX_PAGE
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 6069808 ===
[2025-10-29 16:18:56] INFO: Container c7551ecbb126e8be5e65d6821910412b5f9eab0913bd7e8d587064c32049e84b has stopped
